finished all sensor filtfer and every over 60ms